--- a/lib/template/combo_with_config.mustache
+++ b/lib/template/combo_with_config.mustache
@@ -1,13 +1,13 @@
 (function(S){
 
     // 包名
-    var PACKAGE_NAME = 'example';
+    var PACKAGE_NAME = '{{& packageName}}';
     // 入口模块的包路径
-    var MAIN_MOD_PATH = 'example/package_one/index.js';
+    var MAIN_MOD_PATH = '{{& mainModPath}}';
     // 包Tag
-    var PACKAGE_TAG = '';
+    var PACKAGE_TAG = '{{& tag}}';
     // 包的编码
-    var PACKAGE_CHARSET = 'gbk';
+    var PACKAGE_CHARSET = '{{& charset}}';
 
     // 获取KISSY package 配置需要用到的 `path` 值.
     var scripts = document.getElementsByTagName("script");
@@ -50,21 +50,9 @@
 })( KISSY );
 
 // 引入所有的模块定义
-/*
-combined files : 
-
-example/package_one/mod
-example/package_one/index
-
-*/
-KISSY.add('example/package_one/mod',function(){
-    console.log( 'mod' );
-});KISSY.add('example/package_one/index',function(){
-
-    console.log( 'index');
-},{requires: [ './mod' ]});
+{{& modulesContent}}
 
 (function(S){
     // 启动入口模块
-    S.use( 'example/package_one/index.js' );
+    S.use( '{{& mainModPath}}' );
 })();
