修复小种模式的几个问题

--- a/lib/template/combo_with_config.mustache
+++ b/lib/template/combo_with_config.mustache
@@ -2,8 +2,8 @@
 
     // 包名
     var PACKAGE_NAME = '{{& packageName}}';
-    // 入口模块的包路径
-    var MAIN_MOD_PATH = '{{& mainModPath}}';
+    // 当前文件页面引用地址中报名到文件名部分
+    var OUTPUT_PACKAGE_PATH = '{{& outputPackagePath}}';
     // 包Tag
     var PACKAGE_TAG = '{{& tag}}';
     // 包的编码
@@ -34,7 +34,7 @@
     }
 
     // 当前脚本的url除去入口模块的路劲就是包的path.
-    packagePath = currentScriptPath.substring( 0, currentScriptPath.indexOf( MAIN_MOD_PATH ) );
+    packagePath = currentScriptPath.substring( 0, currentScriptPath.indexOf( OUTPUT_PACKAGE_PATH ) );
 
     // 包配置
     S.config({
@@ -45,6 +45,10 @@
                 path: packagePath,
                 charset: PACKAGE_CHARSET
             }
+        ],
+        // 将所有当前包下的请都映射到当前文件
+        map: [
+            [ new RegExp( '\/' + PACKAGE_NAME + '\/.*' ), currentScriptPath ]
         ]
     });
 })( KISSY );
@@ -55,4 +59,4 @@
 (function(S){
     // 启动入口模块
     S.use( '{{& mainModPath}}' );
-})();
+})(KISSY);
